--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title: "지나가는 개발자 T의 블로그"
 description: ""
 
 # The subpath of your site, e.g. /blog, for generating urls.
-baseurl: ""
+baseurl: "https://makepin2r.github.io/"
 
 # The base hostname & protocol of your site for where absolute urls are needed.
 url: "https://scriptor-jekyll.netlify.com"
