--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,38 @@ main:
     #   url: /collection-archive/
     # - title: "Sitemap"
     #   url: /sitemap/
+docs:
+    - title: 기록
+      children:
+          - title: "TIL"
+            url: til/
+            category: "til"
+          - title: "WIL"
+            url: wil/
+            category: "wil"
+    - title: Projects
+      children:
+          - title: "동네마실"
+            url: project-dongnemashil/
+            category: "project-dongnemashil"
+    - title: Frontend
+      children:
+          - title: "JavaScript"
+            url: js/
+            category: "js"
+          - title: "TypeScript"
+            url: ts/
+            category: "ts"
+    - title: CS
+      children:
+          - title: "HTTP"
+            url: http/
+            category: "http"
+    - title: 알고리즘
+      children:
+          - title: "프로그래머스"
+            url: algorithm-programmers/
+            category: "algorithm-programmers"
+          - title: "알고리즘 & 자료구조"
+            url: algorithm/
+            category: "algorithm"
