--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -45,3 +45,8 @@ docs:
           - title: "알고리즘 & 자료구조"
             url: /algorithm
             category: "algorithm"
+    - title: 재미있는 것들
+      children:
+          - title: "꿀팁"
+            url: /tips
+            category: "tips"
