chore: vue 카테고리 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,6 +32,9 @@ docs:
           - title: "TypeScript"
             url: ts/
             category: "ts"
+          - title: "Vue"
+            url: vue/
+            category: "vue"
     - title: CS
       children:
           - title: "HTTP"
