update: python 카테고리 생성

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,6 +35,9 @@ docs:
           - title: "Vue"
             url: /vue
             category: "vue"
+          - title: "Python"
+            url: /python
+            category: "python"
     - title: CS
       children:
           - title: "HTTP"
