fix: 내비게이션 수정

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,6 +36,7 @@ docs:
             url: /vue
             category: "vue"
     - title: Data Science
+      children:
           - title: "Python"
             url: /python
             category: "python"
