fix: 누락된 next export 삭제

--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "lint": "next lint",
     "lint:fix": "eslint --fix ./src",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "preexport": "rm -rf out",
-    "export": "next export",
     "touch": "touch out /.nojekyll",
     "posttouch": "touch out /_next/.nojekyll"
   },
