--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "preexport": "rm -rf out",
-    "touch": "sudo touch out /.nojekyll",
-    "posttouch": "sudo touch out /_next/.nojekyll"
+    "touch": "sudo touch out /.nojekyll"
   },
   "dependencies": {
     "gh-pages": "^6.2.0",
