--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,11 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "useTabs": false,
-  "tabWidth": 2,
   "printWidth": 80,
-  "arrowParens": "always"
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "endOfLine": "auto",
+  "useTabs": false,
+  "arrowParens": "avoid"
 }
