--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "touch": "sudo touch out /.nojekyll"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "gh-pages": "^6.2.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
