--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
+    "dayjs": "^1.11.13",
     "gh-pages": "^6.2.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -31,8 +32,10 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "glob": "^11.0.0",
+    "gray-matter": "^4.0.3",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "reading-time": "^1.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
