--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "touch": "sudo touch out /.nojekyll"
   },
   "dependencies": {
+    "@fec/remark-a11y-emoji": "^4.0.2",
     "@radix-ui/react-icons": "^1.3.2",
     "dayjs": "^1.11.13",
     "gh-pages": "^6.2.0",
     "next": "15.0.3",
+    "next-mdx-remote": "^5.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
+    "shiki": "^1.24.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
