build: rehype 추가

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-scripts": "^5.0.1",
+    "rehype": "^13.0.2",
     "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
     "remark-breaks": "^4.0.0",
