--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   },
   "dependencies": {
     "@fec/remark-a11y-emoji": "^4.0.2",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.0.4",
     "@radix-ui/react-icons": "^1.3.2",
+    "@types/mdx": "^2.0.13",
     "dayjs": "^1.11.13",
     "gh-pages": "^6.2.0",
     "next": "15.0.3",
