--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gh-pages": "^6.2.0",
     "next": "15.0.3",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.4",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-scripts": "^5.0.1",
